force-app/main/default/objects/FINS_Distributed_Marketing_Template__c/FINS_Distributed_Marketing_Template__c.object-meta.xml
<CustomObject>
    <label>Distributed Marketing Template</label>
    <nameField>
        <label>Distributed Marketing Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distributed Marketing Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>