force-app/main/default/objects/FINS_Distributed_Marketing_Template__c/fields/Header_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Header_Image_URL__c</fullName>
    <label>Header Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>