force-app/main/default/objects/FINS_Distributed_Marketing_Template__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lending</fullName>
            </value>
            <value>
                <fullName>Retail Banking</fullName>
            </value>
            <value>
                <fullName>Wealth Management</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Commercial Banking</fullName>
            </value>
            <value>
                <fullName>Asset Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>