force-app/main/default/objects/FINS_Distributed_Marketing_Template__c/fields/Primary_Description__c.field-meta.xml
<CustomField>
    <fullName>Primary_Description__c</fullName>
    <label>Primary Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>