force-app/main/default/objects/FINS_Distributed_Marketing_Template__c/fields/Primary_Header__c.field-meta.xml
<CustomField>
    <fullName>Primary_Header__c</fullName>
    <description>Heading text shown right below the Header Image</description>
    <label>Primary Header Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>